Navbar overlap fixed
Still need to adjust padding when screen size changes

--- a/css/full-slider.css
+++ b/css/full-slider.css
@@ -7,6 +7,7 @@
 html,
 body {
     height: 100%;
+    padding-top: 50px;
 }
 
 .carousel,
@@ -38,3 +39,4 @@ footer {
 .navbar {
     margin-bottom: 0px;
 }
+
